--- a/css/style.css
+++ b/css/style.css
@@ -6,5 +6,11 @@
     padding: 0.3rem;
 }
 
+.ajusteMain{
+    width: 80%;
+    margin-top: 8%;
+    margin-left: auto;
+    margin-right: auto;
 
+}
 
